<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RankingFragment">

    <FrameLayout
        android:layout_height="202dp"
        android:layout_width="match_parent"
        android:background="#D8D8D8">
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scrollbars="none">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/menu_lligues">
        <ImageButton
            android:layout_width="70dp"
            android:background="@color/white"
            android:layout_height="match_parent"
            android:id="@+id/rank_bronze"
            android:src="@drawable/rank_bronze_b"
            android:contentDescription="@string/a_bronze_medal" />
        <ImageButton
            android:layout_width="70dp"
            android:background="@color/white"
            android:layout_height="match_parent"
            android:id="@+id/rank_silver"
            android:src="@drawable/rank_silver_b"
            android:contentDescription="@string/a_silver_medal"
            android:layout_toEndOf="@+id/rank_bronze"/>
        <ImageButton
            android:layout_width="70dp"
            android:background="@color/white"
            android:layout_height="match_parent"
            android:id="@+id/rank_gold"
            android:src="@drawable/rank_gold_b"
            android:contentDescription="@string/a_gold_medal"
            android:layout_toEndOf="@+id/rank_silver" />
        <ImageButton
            android:layout_width="70dp"
            android:background="@color/white"
            android:layout_height="match_parent"
            android:id="@+id/rank_sapphire"
            android:src="@drawable/rank_sapphire_b"
            android:contentDescription="@string/a_sapphire_medal"
            android:layout_toEndOf="@+id/rank_gold" />
        <ImageButton
            android:layout_width="100dp"
            android:background="@color/white"
            android:layout_height="match_parent"
            android:id="@+id/rank_ruby"
            android:src="@drawable/rank_ruby"
            android:contentDescription="@string/a_ruby_medal"
            android:layout_toEndOf="@+id/rank_sapphire"/>
        <ImageButton
            android:layout_width="70dp"
            android:background="@color/white"
            android:layout_height="match_parent"
            android:id="@+id/medal_locked1"
            android:src="@drawable/rank_locked"
            android:contentDescription="@string/a_locked_medal"
            android:layout_toEndOf="@+id/rank_ruby"/>
        <ImageButton
            android:layout_width="70dp"
            android:background="@color/white"
            android:layout_height="match_parent"
            android:id="@+id/medal_locked2"
            android:src="@drawable/rank_locked"
            android:contentDescription="@string/a_locked_medal"
            android:layout_toEndOf="@+id/medal_locked1"/>
        <ImageButton
            android:layout_width="70dp"
            android:background="@color/white"
            android:layout_height="match_parent"
            android:id="@+id/medal_locked3"
            android:src="@drawable/rank_locked"
            android:contentDescription="@string/a_locked_medal"
            android:layout_toEndOf="@+id/medal_locked2"/>
        <ImageButton
            android:layout_width="70dp"
            android:background="@color/white"
            android:layout_height="match_parent"
            android:id="@+id/medal_locked4"
            android:src="@drawable/rank_locked"
            android:contentDescription="@string/a_locked_medal"
            android:layout_toEndOf="@+id/medal_locked3"/>
    </RelativeLayout>
    </HorizontalScrollView>

    <FrameLayout
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white">

    <TextView
        android:id="@+id/league_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:fontFamily="@font/din_bold"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:text="@string/ruby_league"/>

    <TextView
        android:id="@+id/league_text_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/din"
        android:textSize="15sp"
        android:textColor="#4C4C4C"
        android:text="@string/league_desc"/>

    </FrameLayout>
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_ranking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="202dp">

    </androidx.recyclerview.widget.RecyclerView>
</FrameLayout>